# CountIt

./: CMakeLists.txt  filehandler.cpp  filehandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  textprocessor.cpp  textprocessor.h  wordfrequencydialog.cpp  wordfrequencydialog.h  wordfrequencydialog.ui
